// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routeData function should generate active route 1`] = `
Object {
  "await": false,
  "param": "id",
  "type": "getActive",
}
`;

exports[`routeData function should generate collection route 1`] = `
Object {
  "await": false,
  "params": Object {},
  "type": "getMany",
}
`;

exports[`routeData function should generate collection route with parameters 1`] = `
Object {
  "await": false,
  "params": Object {
    "filter[type][$eq]": "comedy",
    "sort": "startAt",
  },
  "type": "getMany",
}
`;
